# webapp-cpp

./: CMakeLists.txt  README.md  app.cpp  app.h  configs.cpp  configs.h  ext.cpp  ext.h  log.cpp  log.h  main.cpp  router.cpp  router.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  webapp.pro  webserver.cpp  webserver.h  wserver.cfg
clients/: termoclient.cpp  termoclient.h
handlers/: ihandler.h  termohandler.cpp  termohandler.h  unknownhandler.cpp  unknownhandler.h
